<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_welcome_header"
            style="@style/TextViewHeader"
            android:text="@string/welcome_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_welcome_description"
            style="@style/TextViewDescription"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_welcome_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_welcome_next"
            style="@style/Button"
            android:layout_marginTop="64dp"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_field_layout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
