<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.main.MainViewModel" />
    </data>


    <!--ContraintLayout used as it's easier to design for adapting to screen changes using only one view group-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/TextInputLayout"
            android:layout_marginTop="32dp"
            android:hint="@string/shoe_name_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                style="@style/EditText"
                android:inputType="text"
                android:maxLength="100"
                android:text="@={viewModel.shoeDataView.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_company"
            style="@style/TextInputLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/company_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_company"
                style="@style/EditText"
                android:inputType="text"
                android:maxLength="100"
                android:text="@={viewModel.shoeDataView.company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_size"
            style="@style/TextInputLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/shoe_size_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_size"
                style="@style/EditText"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:text="@={viewModel.shoeDataView.size}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            style="@style/TextInputLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/shoe_description_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_description"
                style="@style/EditText"
                android:inputType="textImeMultiLine"
                android:maxLength="400"
                android:text="@={viewModel.shoeDataView.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Button"
            android:layout_width="160dp"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Button"
            android:layout_width="160dp"
            android:onClick="@{() -> viewModel.onCancel()}"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
