<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_layout_email"
            style="@style/TextInputLayout"
            android:layout_marginTop="64dp"
            android:hint="@string/email_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_email"
                style="@style/EditText"
                android:inputType="textEmailAddress"
                android:maxLength="250" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_layout_password"
            style="@style/TextInputLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/password_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_field_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_password"
                style="@style/EditText"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/Button"
            android:layout_marginTop="64dp"
            android:text="@string/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_field_layout_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signin"
            style="@style/Button"
            android:layout_marginTop="8dp"
            android:text="@string/singin_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
